--- a/1. CSS_Selector.md
+++ b/1. CSS_Selector.md
@@ -162,7 +162,7 @@ h1~ul {background: darkgreen; color:yellowgreen;}
 | E[attr^="val"]|'attr' 속성의 값이 'val'로 시작하는 요소를 선택한다.|3| IE6 |
 | E[attr$="val"]|'attr' 속성의 값이 'val'로 끝나는 요소를 선택한다.|3| IE6 |
 | E[attr*="val"]|'attr' 속성의 값에 'val'이 포함되는 요소를 선택한다.|3| IE6 |
-| E[attr|="val"]|'attr' 속성의 값이 정확하게 'val' 이거나 <br> 'val-'으로 시작되는 요소 E를 선택한다.|2| IE6 |
+| E[attrㅣ="val"]|'attr' 속성의 값이 정확하게 'val' 이거나 <br> 'val-'으로 시작되는 요소 E를 선택한다.|2| IE6 |
 
 ```css
 /* E[attr] 형식 */
@@ -285,3 +285,121 @@ UI 요소 상태 선택자(The UI element states pseudo-classes)
 
 ## 3. 마지막에 지정된 스타일을 우선 적용한다.
 스타일 우선순위가 같더나, 계산 방법이 없는 경우 마지막에 지정된 스타일이 우선 적용된다. 예를 들어, 자손선택자와 자식 선택자가 부딪힐 경우 우선순위 계산법이 없으므로 두 스타일 중 마지막에 지정된 스타일이 적용된다.
+
+
+# 4. CSS의 우선권, 캐스케이딩(Cascading)
+여러 개의 CSS파일을 결합할 때, 충동을 해결하는 프로세스가 ```Cascade```이다.    
+```CSS```에는 우선권이라는 것이 있는데 이는 ```먼저 적용될 권리```를 말하는데 이것이 ```CSS```의 ```cascading```룰에 해당된다.    
+예를 들어, 다음과 같이 동일한 속성 선언이 중복될 경우 나중에 선언된 속성이 우선권이 높아서 그 선택지가 적용된다.
+
+```css
+h1{
+    color:red;
+}
+h1{
+    color:blue;
+}
+```
+
+## 1. 우선권에 대한 구체성, 명시성, 세분화
+CSS 스타일은 W3C CSS 2.1 명세에서 정의한 무게의 구체성에 의하여 적용된다.    
+명시도는 선택자가 얼마나 명시적인가? 를 숫자로 표현하는 것이다.    
+선택자의 명시도를 판단하는데 세 가지 기준이 들어간다.    
+위 숫자와 쉼표로 구분한 것이 그 기준이 된다.    
+    
+<br>
+
+숫자 사이에 쉼표가 있는데 이는 각 세분화의 레벨이 서로 독립적이다.    
+이 말은 클래스 설명자 하나 정의되어있는 것이 요소(타입) 선택자가 여러 개 있는 것보다 더 명시적일 수 있기 때문이다.    
+그리고 쉼표로 구분하지 않고 0013 점수로 환산한다면 13점 정도로 이해할 수 있는 오해가 있기 때문에 주의를 요한다.    
+만약에 구체성이 0,0,1,0 과 0,0,0,11 명시도를 10,11로 오해해서 명시도가 더 높다고 잘못 이해할 수 있다.    
+그리고 흔히 오해하는 것이 하나 더 있다.    
+구조상 가깝게 있는 것이 명시도에 영향을 미친다고 생각하는 경우가 많다.    
+두 선택자 모두 요소 설명자 2개씩만 있다.    
+명시도는 똑같다.(0,0,2,0) 이러한 경우 둘 중 나중에 쓴 규칙이 앞의 규칙을 덮어쓴다.    
+문서 구조상 보면 ul요소가 html 요소보다 li요소에 더 가까이 있지만, 이러한 위치 관계는 명시도와 아무런 상관이 없다.    
+명시도는 단지 숫자일 뿐이고 문서 구조를 절대 평가하지 않는다.    
+명시도가 같을때에는 뒤에 쓴 규칙이 앞의 규칙을 덮어쓴다. 그래서 CSS를 cascading(폭포)이라고 한다.    
+
+```HTML
+<h2>헤딩 요소
+    <span>명시성 테스트 (0,0,0,2)</span>
+</h2>
+
+<h4 class="c_type">클래스 구체성은
+    <span class="c_type2">0,0,2,2 입니다.</span>
+</h4>
+```
+명시도 맨 앞에 0은 ```인라인 스타일(Style Attribute)```를 타나낸다.
+```css
+h2 {
+    color: red; /* 0,0,0,1 */
+}
+h2 span {
+    color: green; /* 0,0,0,2 */
+}
+h4.c_type { /* 0,0,1,1 */
+    color: gray;
+}
+h4.c_type span.c_type2 { /* 0,0,2,2 */
+    color: pink;
+}
+#content {
+    color: black;
+}
+
+div ul ul li {
+    /* 요소 설명자 0,0,0,4 */
+}
+
+div.aside ul li {
+    /* 클래스 1개와 요소가 3개이므로 0,0,1,3 */
+}
+
+a:hover {
+    /* 가상 클래스 1개와 요소 1개 0,0,1,2 */
+}
+
+div.nav a:hover {
+    /* 가상 클래스1개와 클래스 1개 그리고 요소가 2개 0,0,2,2 */
+}
+
+#content em {
+    /* 아이디 선택자 1개와 요소 선택자 1이므로 0,1,0,1 */
+}
+div#content em {
+    /* 아이디 선택자가 1개와 요소가 2개 0,1,0,2 */
+}
+```
+
+### CSS는 캐스케이드(우선 적용 순위) 개념 이해가 중요한 언어이다.
+가장 기본적인 수준에서는 CSS 규칙의 순서가 중요하지만, 실상은 그보다 복잡하다.    
+캐스케이드에서 어떤 선택자가 우선권을 가지는지는 3가지 요인에 달려 있다.
+
+* 중요성
+* 속성(계산된 점수)
+* 소스 순서
+
+## 2. 무조건 :!important
+지금 설명한 구체성보다 우선권을 가지는 것이 있는데 그것은 ```!important```가 있다.    
+
+```HTML
+<div id="demo">
+    <p id="demo-child" style="color:tan">Lorem ipsum dolor sit.</p>
+</div>
+```
+```css
+div#demo p#demo-child {
+    color: red /*!important*/;  /* 0,2,0,2 */
+}
+div p {
+    color: green !important; /* 1,0,0,2 */
+}
+```
+기본적으로 중요 표시가 있는 선언은 중요 표시가 없는 선언을 모두 오버라이딩하게 된다.    
+아이디 선택자가 2개나 있어서 구체성이 높은 편이지만 우선권을 ```!important``` 에게 뺏겨버렸기 때문이고, 임포턴트는 카드의 조커와 같은 역할을 한다고 할 수 있다.    
+그런데 둘다 ```!important```가 선언되어 있다면 두 선언 모두 조커가 선언되어 있기 때문에 동등한 레벨이므로 일반적인 케이케이딩 규칙이 적용된다.    
+즉 명시도가 적용되는 것이다.   
+ 
+따라서 ```!important``` 는 조심해서 써야 한다. 이걸 남용하기 시작하면 거의 임포턴트 블랙홀에 빠지게 되어 유지보수나 실무자에게 작업의 어려움을 겪게 한다.    
+가능하면 사용하지 않되 유의하며 사용하자.    
