--- a/3. CSS_BoxModel.md
+++ b/3. CSS_BoxModel.md
@@ -1,1 +1,110 @@
+# CSS 박스 모델
 
+# block vs inline vs inline-block 요소간 특성에 대한 이해
+박스 모델을 이해하기 위해서는 ```block```요소와 ```inline```요소 그리고 ```inline block```요소에 대해 알고 있어야 한다.
+
+## block level 요소(Flow Contents)
+블록 박스는 다른 블록 박스에 포함되거나, 포함할 수 있고, ```너비(width)``` / ```높이(height)``` 설정이 가능하다.    
+내부에 콘텐츠를 포함하지 않을 경우 ```높이는 0```이다.    
+기본적으로 width 값이 auto로 적용되어 자신을 포함하는 부모 영역의 너비만큼 늘어난다.    
+그러므로 마크업 상 나중에 작성된 다음 형제 요소는 해당 요소의 아래에 위치한다.    
+간단히 말해, 일반적으로 줄바꿈되는 요소를 의미한다.    
+
+## inline 요소 (Phrasing Contents)
+인라인 박스는 다른 인라인 박스에 포함되거나, 포함할 수 있지만, ```블록 요소는 포함할 수 없다```.    
+```너비(width) / 높이(height) 설정이 가능하지 않고 내부에 포함한 콘텐츠 만큼 높이와 너비를 가지게 된다.```    
+다시 말해, 자신이 포함하는 콘텐츠(예: 텍스트) 만큼만 너비를 가질 수 있다.    
+사용자가 임의로 ```width 속성을 부여해도 반영되지 않는다.```    
+그러므로 마크업 상 다음 형제 요소는 기본 흐름 상에서 오른쪽 옆에 붙는다.    
+
+## inline-block 요소
+인라인 블록 박스는 기본적으로는 인라인 특성을 가지고 인라인처럼 화면에 렌더링되지만, ```블록 박스처럼 너비(width) / 높이(height) 설정이 가능```하다. (```<img>```, ```<input>```, ```<button>``` 등)    
+기본적으로 자신이 포함하는 콘텐츠 만큼만 너비를 가지지만 (inline 요소처럼) ```사용자가 임의로 width 속성을 부여해 너비를 설정```할 수 있다. 이 점이 inline 요소와의 차이점이다.    
+예를 들어 레이아웃을 나란히 배치해야 하는 상황에서 각 요소에 width 속성을 적용해야 하는 상황이 있다.    
+간단한 예로 수평 내비게이션을 들자면... 물론 a 요소만 나열해도 수평 배치 되지만, width 속성은 적용되지 않는다.    
+```a``` 요소는 기본적으로 inline 이기 때문이다.    
+하지만 ```a``` 요소에 ```inline-block```을 설정하면 block 설정과 달리 수평 배치를 유지한 상태에서 width 속성을 부여해 동일한 너비만큼 아이템들을 설정할 수 있다.    
+
+# margin-box, border-box, padding-box, content-box
+박스(box)는 ```외부 공간 박스(margin-box)```, ```테두라 공간 박스(border-box)```, ```내부 공간 박스(padding-box)```, ```콘텐츠 공간 박스(content-box)```로 구성되어 있다.    
+인라인 박스는 좌/우 방향으로 마진, 패딩 공간을 설정할 수 있으나, ```상/하 방향으로는 공간이 설정되지 않는다```.
+
+**주의할 점**
+```content-box```,```padding-box```, ```border-box``` 는 배경을 지정해 줄 수 있지만 margin-box 는 배경이 적용되지 않는다.
+마진 박스는 박스와 박스 사이의 간격을 제어할 때 사용할 수 있다.
+그리고 ```마진 박스는 음수값을 사용할 수 있는 반면에 나머지 박스들은 음수값을 사용할 수 없다.```    
+```margin```, ```padding```, ```border``` 의 공간 설정 방향은 시계방향 순으로 설정된다.
+
+## margin, padding
+```padding``` 은 요소의 안쪽 여백을,    
+```margin``` 은 요소의 바깥 여백을 지정하는 속성이다.
+
+**```margin```속성**
+* ```margin``` : margin 속성들의 축약 속성
+* ```margin-top``` : 요소 외부의 상단 간격을 지정
+* ```margin-right``` : 요소 외부의 우측 간격을 지정
+* ```margin-bottom``` :요소 외부의 하단 간격을 지정
+* ```margin-left``` : 요소 외부의 좌측 간격을 지정
+
+```css
+margin: 10px 5px 15px 20px; (top right bottom left)
+margin: 10px 5px 15px; (top right-left bottom)
+margin: 10px 5px; (top-bottom right-left)
+margin: 10px; (top-right-bottom-left)
+```
+**```padding```속성**
+* ```padding``` : padding 속성들의 축약 속성
+* ```padding-top``` : 요소 내부의 상단 간격을 지정
+* ```padding-right``` : 요소 내부의 우측 간격을 지정
+* ```padding-bottom``` :요소 내부의 하단 간격을 지정
+* ```padding-left``` : 요소 내부의 좌측 간격을 지정
+
+```css
+padding: 10px 5px 15px 20px; (top right bottom left)
+padding: 10px 5px 15px; (top right-left bottom)
+padding: 10px 5px; (top-bottom right-left)
+padding: 10px; (top-right-bottom-left)
+```
+
+## border
+```border``` 요소에 대한 선(테두리)을 적용할 때 사용하는 속성이다.    
+```border``` 속성은 요소에 테두리 효과를 주는 것이며, 모든 ```border``` 속성들을 한 번에 선언할 수 있는 축약 속성이다.    
+```border-color```, ```border-width```, ```border-style``` 속성들을 한꺼번에 선언할 수 있으며 ```{border:solid #ff0000;}``` 처럼 ```style-color``` 또는 ```style-width``` 만 적어도 무방하다.    
+대신 어떤 값을 주던 ```style``` 속성은 반드시 선언해 주어야 한다.    
+
+**```border```속성, 값**
+* ```border``` : 테두리의 너비(굵기)를 지정
+* ```border-(top|right|bottom|left)-width``` : 테두리의 너비(굵기)를 지정
+* ```border-(top|right|bottom|left)-style``` : 테두리의 스타일을 지정
+* ```dotted``` : 도트(점선) 테두리 지정
+* ```dashed``` : 대시 기호(-) 테두리 지정
+* ```solid``` : 일반적인 라인 테두리 지정
+* ```double``` : 두 줄로 테두리 지정
+* ```border-(top|right|bottom|left)-color``` : 테두리의 색상을 지정
+
+```css
+.selector {
+    border-(top|right|bottom|left)-width
+    border-(top|right|bottom|left)-style
+    border-(top|right|bottom|left)-color
+    border: width style color
+    border-top: width style color
+    border-right: width style color
+    border-bottom: width style color
+    border-left: width style color
+}
+```
+
+## outline
+```outline``` 은 요소 바깥 주위에 둘러지는 선이며 만약 요소에 ```border``` 가 적용되어 있다면 ```outline``` 은 그 바깥에 생성된다.
+
+**```outline```속성, 값**
+* ```outline``` : outline 속성들의 축약(속기) 속성
+* ```outline-color``` : 요소 바깥 선의 색상을 지정
+* ```outline-style``` : 요소 바깥 선의 스타일을 지정
+* ```outline-width``` : 요소 바깥 선의 너비를 지정
+
+```outline``` 은 ```{outline:solid #FF0000}``` 과 같이 ```style-color``` 또는 ```style-width``` 만 적어도 무방하지만 대신 어떤 값을 주던 ```style``` 속성은 반드시 선언해주어야 한다.
+
+```outline``` 은 요소의 영역을 차지하는 부분이 아니기 때문에 어떤 요소에 ```outline``` 을 주더라도 ```width``` 와 ```height``` 에는 영향이 없다.
+즉, ```outline``` 은 ```width``` 와 ```height``` 박스에 ```outline``` 의 두께는 포함되지 않는다.
