--- a/4. CSS_Lists.md
+++ b/4. CSS_Lists.md
@@ -1,1 +1,191 @@
+# Lists 스타일링, Backgrounds
+리스트(목록)를 스타일하는 방법과 CSS ```background```속성에 대해 살펴본다.
 
+# Lists 스타일링
+
+## HTML목록과 관련된 속성
+HTML 목록에는 ```<ul>```, ```<ol>```,```<li>```,```<dl>```,```<dt>```,```<dd>```이 있는데 이와 관련된 스타일에 대해 서술한다.    
+<br>
+
+**목록과 관련된 속성**
+* ```list-style-type``` : upper-alpha | korean-hangul-formal ...
+* ```list-stye-position``` : outside | inside
+* ```list-style-image``` : url("star.svg")
+* ```list-style``` : square url("star.svg") inside [속기(shorthand) 유형 작성법]
+
+### HTML 속성을 사용한 순차 목록(리버스, 항목) 설정
+```HTML
+<ol start="9">
+    <li>list-style-type : upper-alpha | korean-hangul-formal ...</li>
+    <li>list-stye-position : outside | inside</li>
+    <li>list-style-image : url("star.svg")</li>
+    <li>list-style : square url("star.svg") inside [속기(shorthand) 유형 작성법]</li>
+</ol>
+
+<ol start="9" reversed>
+
+<ol>
+    <li value="2">list-style-type </li>
+    <li value="4">list-stye-position</li>
+    <li value="6">list-style-image</li>
+    <li value="8">list-style</li>
+</ol>
+```
+
+### line-height 상속
+```line-height(줄간격)```은 단위에 따라 상속되는 것이 다르다.   
+```line-height``` 단위가 ```%```일 경우 ```em```단위와 동일하게 표현된다. 
+
+* em단위를 사용한 경우
+```HTML
+<ul>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>consectetur adipisicing <span>elit. Odit, porro!</span></li>
+</ul>
+    
+<style>
+    ul {
+        font-size: 18px;
+        line-height: 2em;
+        /* em을 px 로 환산하면 기준픽셀인 18px * 2em = 36px; */
+    }
+    li {
+        font-size: 15px;
+        /* line-height: 16px; */
+    }
+</style>
+```
+부모 요소인 ```<ul>```의 폰트사이즈 18px이 자손 요소로 상속되기 때문에 ```<li>```요소에 36px라는 line-height를 상속받게 된다.    
+
+즉, 자식 요소에 폰트사이즈인 자신의 글씨 크기를 기준으로 줄 간격을 계산하지 않고 부모 요소의 18px을 상속받은 값을 그대로 사용하게 된다.    
+그러나 주석을 풀고 ```line-height:16px;``` 다른 값을 재선언 하게 되면 재선언된 값을 사용하게 된다.
+
+* 단위 없는 정수를 사용한 경우
+```HTML
+ul {
+    font-size: 18px;
+    line-height: 2;
+}
+li {
+    /*font-size: 15px;*/
+    /*line-height: 16px;*/
+}
+```
+위 코드와 같이 단위 없는 정수로만 줄 간격을 선언하게 되면 em 단위와는 다르게 자식 요소에 부모값이 상속되게 된다.    
+그럼 자손 요소에 폰트사이즈가 재정의되어 있다면 부모의 줄간격 값을 곱해서 계산하게 된다.    
+<br>
+
+다시말해, ```<li>``` 요소에 폰트 사이즈가 정의되어 있지 않다면 ```18 * 2 = 36px```의 줄 간격이 표현되나,    
+```<li>```요소에 폰트 사이즈가 재정의 되어 있다면 해당 요소 값인 ```15 * 2 = 30px```의 줄 간격이 표현되게 된다.
+
+# Backgrounds(배경)
+CSS 배경 속성인 ```background```를 사용하면 요소의 배경에 색상, 이미지, 위치, 반복, 고정 여부 등을 설정할 수 있다.    
+그리고 모던 브라우저에서는 배경 이미지의 시작점(origin)을 조정하거나, 클리핑(clipping) 영역을 설정할 수 있으며, 요소의 배경이 지정되는 공간은 요소의 ```content-box```,```padding-box```,```border-box```까지 포함되고 ```margin-box```는 투명영역으로 배경 지정에서 제외된다.    
+모던 브라우저에서는 배경을 차지하는 영역을 ```background-clip```속성을 사용하여 변경할 수 있다.
+
+**배경과 관련된 속성**
+|속성|배경|
+|:---|:---|
+|background-color|배경색을 설정한다. (기본값: transparent)|
+|background-image|요소의 배경에 표시할 배경 이미지를 설정한다. (기본값: none)|
+|background-position|배경이 요소 배경 안에 표시되어야 하는 위치를 설정한다. (기본값: left top)|
+|background-repeat|배경을 반복할지 여부를 설정한다. (기본값: repeat)|
+|background-attachment|내용이 스크롤 될 때 요소의 배경 동작을 설정한다. (기본값: scroll)|
+|background|모든 background 속성의 축약 속성으로<br>위에 기술한 5가지 배경 속성을 모아 작성하는 속기법이다.|
+|background-size|배경 이미지의 크기를 동적으로 조정할 수 있다. (기본값: auto)|
+|background-clip|배경 이미지를 클리핑(오려내기) 하는 영역을 설정할 수 있다. (기본값: border-box)|
+|background-origin|배경 이미지의 시작 위치를 특정 영역으로 설정할 수 있다. (기본값: padding-box)|
+
+```css
+div { background-color:#00ff00; }
+
+div { background-image:url(bg.gif); }
+
+div { background-position:left top; }
+
+div { background-repeat:repeat-y; }
+    
+div { background: #ff0000 url(bg.gif) top left no-repeat; }
+```
+
+### background-color
+```html```,```body``` 요소에서부터 ```em```, ```a``` 같은 인라인 요소까지 문서 안에 있는 거의 모든 요소에 배경색을 지정할 수 있다.
+배경색은 상속되지 않으며 기본값은 투명(transparent)이다.
+
+### background-image
+배경 이미지를 설정한다. 이미지 경로를 ```url('')```에 작성하면 해당 경로에 있는 이미지가 표시된다.
+이때 요소박스(배경 지역) 가 이미지보다 더 클시 이미지는 반복되어 표시된다.
+
+### background-position
+```background-position``` 속성은 배경 이미지의 시작 위치를 지정한다.    
+일반적으로 백그라운드 이미지는 좌측(왼쪽) 위부터 이미지를 표시한다.    
+이때 이 속성을 사용하면 이미지의 좌표를 원하는 위치에 놓을 수 있으며, 좌표값은 공백(띄어쓰기)을 기준으로 ```x,y좌표```를 지정하여 사용할 수 있다.
+
+**background-position 속성값**
+* ```background-position```: X% Y%; : x는 수평(left, right)값이며 y는 수직(top, bottom)값
+top left 는 0% 0%(기본값), right bottom 은 100% 100%, center 는 50%
+
+* ```background-position```: Xpos Ypos : x는 수평(left, right)값이며 y는 수직(top, bottom)값
+top left 는 0 0(0일 때 px 생략 가능), right bottom 은 해당 영역의 가장 큰 픽셀값이고
+% 와 px 값은 함께 사용 가능하다.
+
+### background-repeat
+배경에 이미지를 한 번만 넣을지 반복해서 넣을지 여부를 지정한다.    
+일반적으로 컨테이너 박스보다 작은 이미지를 적용할 시 이미지가 반복되어 출력된다.    
+이때 이 속성을 사용하면 이미지의 반복 여부 및 반복할 방향을 정의할 수 있다.
+
+**background-repeat 속성값**
+* ```repeat``` : 기본값(default), 배경이미지를 수직 수평 모두 반복
+* ```repeat-x``` : 배경이미지를 수평(좌우)으로 반복
+* ```repeat-y``` : 배경이미지를 수직(상하)으로 반복
+* ```no-repeat``` : 배경이미지를 반복하지 않고 한 번만 나타냄
+
+### background 단축 속성(속기형)
+```background``` 는 속성값 간에 순서에 상관없이 지정할 수 있지만 ```background: red url(bg.gif) 50px 10px no-repeat;``` 순으로 많이 사용한다.    
+주의할 사항은 ```background-position``` 값을 선언할 경우에 ```가로,세로 값 순서```로 선언해야 한다.
+
+### background-size
+배경 이미지 크기를 조절하는 속성이다.
+```css
+background-size: auto | length | cover | contain | initial | inherit
+```
+
+**background-size 속성값**
+* ```auto``` : 기본값으로 배경 이미지 원래의 ```width```, ```height``` 를 그대로 표시합니다.
+* ```length``` : ```px```, ```cm``` 등의 단위로 배경 이미지의 ```width``` 와 ```height``` 설정할 수 있으며,
+           % 를 사용할 경우는 너비와 높이를 부모 요소에 비례한 % 값으로 지정하고,
+           첫번째 값은 width, 두번째 값은 height / 한가지 값만 지정하면 나머지는 자동인 auto 설정된다.
+* ```contain``` : contain 값을 지정하면, 배경 이미지의 가로, 세로 모두 엘리먼트보다 작다는 조건하에 가능한한 크게 조정된다.
+    >   이미지의 가로, 세로 비율을 유지하기 때문에 배경 이미지의 크기는 엘리먼트의 크기보다 항상 작거나 같다.    
+    너비와 높이가 내용 안쪽에 알맞은 방식으로 이미지를 가장 크게 조절한다.
+* ```cover``` : 값을 cover 로 지정하면 배경이미지의 가로, 세로 길이 모두 엘리먼트보다 크다는 조건하에 가능한한 배경 이미지를 작게 조정한다.    
+    >   가로, 세로 비율은 유지된다. 따라서 배경 이미지의 크기는 엘리먼트의 크기보다 항상 크거나 같다.    
+즉, 배경 지역이 배경이미지로 완전히 덮이도록 이미지를 가능한한 크게 해서 표시한다.    
+때문에 이미지의 일부분이 보이지 않을 수도 있음에 주의해야 한다.
+
+### background-clip 속성
+배경(이미지나 배경색)을 어느 부분(박스)영역까지 표현할지 지정하는 속성이다.
+```css
+background-clip: border-box | padding-box | content-box | initial | inherit;
+```
+
+**background-clip 속성값**
+* ```border-box``` : 테두리 영역과 그 안쪽 영역을 채운다.
+* ```padding-box``` : 안쪽 여백 영역과 그 안쪽 영역을 채운다.
+* ```content-box``` : 내용 영역과 그 안쪽 영역을 채운다.
+* ```initial``` : 기본값으로 설정한다.
+* ```inherit``` : 부모 요소의 속성값을 상속받는다.
+
+### background-origin
+배경 이미지가 어느 위치에서 기원점을 기준으로 잡느냐를 정의하는 속성이다.
+다시말해, 배경 이미지의 시작에 대한 기준점을 설정하는 속성이다.
+
+```css
+background-origin: border-box | padding-box | content-box | initial | inherit;
+```
+
+**이 속성 역시 border, padding, content 세 영역 중에서 시작 위치를 지정한다.**
+
+* ```padding-box``` : 기본값이며, 배경 이미지는 padding box 에 관계하여 시작 위치를 지정한다.
+* ```border-box``` : 배경 이미지가 border box 에 관계하여 시작 위치를 지정한다.
+* ```content-box``` : 배경 이미지가 content box 에 관계하여 시작 위치를 지정한다.
