Update 7. CSS_2D Transforms.md

--- a/7. CSS_2D Transforms.md
+++ b/7. CSS_2D Transforms.md
@@ -146,9 +146,5 @@ Y축[상/하] = 좌 : - 각도 / 하 : + 각도로 기울이는 효과
 ```
 
 ## CSS Transform examples 
-<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="XWyzzXX" data-user="dobplfxu-the-typescripter" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/dobplfxu-the-typescripter/pen/XWyzzXX">
-  CSS Transform examples</a> by 임도현 (<a href="https://codepen.io/dobplfxu-the-typescripter">@dobplfxu-the-typescripter</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+  <span>트랜스폼 예제 정리 및 실습 <a href="https://codepen.io/dobplfxu-the-typescripter/pen/XWyzzXX">
+  CSS Transform examples</a>
